RESOLVED FIXED191504
[GTK] Silence ATK_XY_PARENT warnings
https://bugs.webkit.org/show_bug.cgi?id=191504
Summary [GTK] Silence ATK_XY_PARENT warnings
Michael Catanzaro
Reported 2018-11-10 10:04:29 PST
Who knows how ATX_XY_PARENT is supposed to be handled. For now, let's crash rather than risk mystery surprises. [2003/2862] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unified-sources/UnifiedSource151.cpp.o In file included from DerivedSources/WebCore/unified-sources/UnifiedSource151.cpp:6: /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceComponent.cpp: In function ‘WebCore::IntPoint atkToContents(WebCore::AccessibilityObject*, AtkCoordType, gint, gint)’: /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceComponent.cpp:58:16: warning: enumeration value ‘ATK_XY_PARENT’ not handled in switch [-Wswitch] switch (coordType) { ^ [2003/2862] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unifie[2004/2862] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unified-sources/UnifiedSource152.cpp.o In file included from DerivedSources/WebCore/unified-sources/UnifiedSource152.cpp:7: /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp: In function ‘WebCore::IntRect textExtents(AtkText*, gint, gint, AtkCoordType)’: /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceText.cpp:320:12: warning: enumeration value ‘ATK_XY_PARENT’ not handled in switch [-Wswitch] switch (coords) { ^ [2004/2862] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unifie[2005/2862] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unifie[2005/2862] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unifie[2006/2862] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unifie[2006/2862] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unifie[2007/2862] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/__/__/DerivedSources/WebCore/unified-sources/UnifiedSource153.cpp.o In file included from DerivedSources/WebCore/unified-sources/UnifiedSource153.cpp:1: /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/atk/WebKitAccessibleUtil.cpp: In function ‘void contentsRelativeToAtkCoordinateType(WebCore::AccessibilityObject*, AtkCoordType, WebCore::IntRect, gint*, gint*, gint*, gint*)’: /home/mcatanzaro/Projects/WebKit/Source/WebCore/accessibility/atk/WebKitAccessibleUtil.cpp:62:16: warning: enumeration value ‘ATK_XY_PARENT’ not handled in switch [-Wswitch] switch (coordType) { ^
Attachments
Patch (2.95 KB, patch)
2018-11-10 11:06 PST, Michael Catanzaro
no flags
Radar WebKit Bug Importer
Comment 1 2018-11-10 10:05:20 PST
Michael Catanzaro
Comment 2 2018-11-10 11:06:58 PST
WebKit Commit Bot
Comment 3 2018-11-12 01:05:56 PST
Comment on attachment 354464 [details] Patch Clearing flags on attachment: 354464 Committed r238082: <https://trac.webkit.org/changeset/238082>
WebKit Commit Bot
Comment 4 2018-11-12 01:05:58 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.