[GTK] Silence ATK_XY_PARENT warnings https://bugs.webkit.org/show_bug.cgi?id=191504

Reviewed by Carlos Garcia Campos.

* accessibility/atk/WebKitAccessibleInterfaceComponent.cpp:
(atkToContents):
* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(textExtents):
* accessibility/atk/WebKitAccessibleUtil.cpp:
(contentsRelativeToAtkCoordinateType):


Canonical link: https://commits.webkit.org/206296@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238082 268f45cc-cd09-0410-ab3c-d52691b4dbfc