Source/WebCore/accessibility/atk/WebKitAccessibleInterfaceComponent.cpp
@@ -60,6 +60,10 @@ static IntPoint atkToContents(AccessibilityObject* coreObject, AtkCoordType coor
             return frameView->screenToContents(pos);
         case ATK_XY_WINDOW:
             return frameView->windowToContents(pos);
+#if ATK_CHECK_VERSION(2, 30, 0)
+        case ATK_XY_PARENT:
+            RELEASE_ASSERT_NOT_REACHED();
+#endif
         }
     }
 
